# ORB_SLAM2_ROS

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_ros.sh
Examples/Monocular/: mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/ROS/ORB_SLAM2/: CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  KeyFrameTrajectory_TUM_Format.txt  manifest.xml
Examples/ROS/ORB_SLAM2/launch/: realsense_mono.launch  realsense_stereo.launch
Examples/ROS/ORB_SLAM2/src/: ROSPublisher.cpp  ROSPublisher.h  ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
Examples/Stereo/: stereo_kitti.cc
include/: IFrameDrawer.h  IFrameSubscriber.h  IMapDrawer.h  IMapPublisher.h  IPublisherThread.h  MapDrawer.h  System.h  Tracking.h  Viewer.h
orb_slam2_lib/: CMakeLists.txt  package.xml
orb_slam2_lib/src/: FrameDrawer.cc  Viewer.cc
orb_slam2_ros/: CMakeLists.txt  package.xml
orb_slam2_ros/doc/: documentation.md
orb_slam2_ros/launch/: eyetoy_stereo.launch  morse_mono.launch  morse_stereo.launch  realsense_mono.launch  realsense_stereo.launch
orb_slam2_ros/settings/: eyetoy_stereo.yaml
orb_slam2_ros/src/: ROSPublisher.cpp  ROSPublisher.h  ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
src/: IMapDrawer.cc  IPublisherThread.cc  MapDrawer.cc  System.cc  Tracking.cc  Viewer.cc
testing/: Readme.md  tara_orb.launch  tara_orb.rviz  taracali_orb.yaml  test_tara_orb.sh
